--- a/views/index.ejs
+++ b/views/index.ejs
@@ -13,19 +13,52 @@
         <fieldset>
             <form action="/" method="post">
                 <textarea name="code" type="text" cols="100" rows="20" class="ghost-input" placeholder="Enter Code"
-                    required></textarea>
+                    required>exports.handler = async (event) => {
+                        var verbose = true;
+                        if (verbose) console.log("############### Loading Lambda handler ############");
+                    
+                        
+                    
+                        var startTime = new Date().getTime();
+                        var responseJson = {};
+                        var needsArray = [];
+                        var responseCode = "200";
+                        try {
+                            responseJson.statusCode = "400"; // assume error..overwrite later
+                            if (verbose) console.log("Event received: ");
+                            if (verbose) console.log(event);
+                    
+                            if (event.queryStringParameters != null) if (event.queryStringParameters.need != null) needsArray = event.queryStringParameters.need.split('-');
+                            if (verbose) console.log("  Received event:" + JSON.stringify(event));
+                    
+                            var responseBody = {};
+                            var stopTime = new Date().getTime();
+                            var elapsedTime = (stopTime - startTime) / 1000.0;
+                            responseBody.elapsed = elapsedTime;
+                            console.log('elapsed: ' + elapsedTime);
+                    
+                            responseJson.isBase64Encoded = false;
+                            responseJson.statusCode = responseCode;
+                            responseJson.headers = { "x-custom-header": "my custom header value" };
+                            responseJson.body = JSON.stringify(responseBody);
+                        }
+                        catch (pex) { console.log(pex.toString()); }
+                        console.log('status code: ' + responseJson.statusCode);
+                        return responseJson;
+                    };</textarea>
+                <textarea name="event" type="text" cols="100" rows="20" class="ghost-input" placeholder="Enter event"
+                    required>{ "queryStringParameters": { "need": "getsurveys", "surveyId": 814412, "supplierId": 1, "supplierName": "Mallesh", "surveyName": "Sattva", "sdate": "2018-11-04", "edate": "2018-11-08" } }    
+                </textarea>
                 <input type="submit" class="ghost-button" value="Lamda">
             </form>
-            <% if(worker_output !== null){ %>
-            <p>
-                <%= worker_output %>
-            </p>
-            <% } %>
-            <% if(worker_log !== null){ %>
-            <p>
-                <%= worker_log %>
-            </p>
-            <% } %>
+
+            <textarea cols="100" rows="20"><% if(worker_output !== null){ %>
+                <%= worker_output %>  <% } %>
+            </textarea>
+            <textarea cols="100" rows="20"><% if(worker_log !== null){ %>
+                <%= worker_log %> <% } %>
+            </textarea>
+
             <% if(error !== null){ %>
             <p>
                 <%= error %>
